<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_mower_next</name>
  <version>0.0.0</version>
  <description>An alternative software for Open Mower based on ROS2.</description>
  <maintainer email="jakub@kaflik.pl">Jakub Kaflik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>hardware_interface</depend>
  <depend>ros2_control</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geographiclib</depend>
  <depend>opennav_docking</depend>

  <build_depend>nlohmann_json_schema_validator_vendor</build_depend>

  <exec_depend>vesc_hw_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tricycle_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>ntrip_client</exec_depend>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>foxglove_msgs</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <opennav_docking plugin="${prefix}/src/docking_helper/plugins.xml" />
  </export>
</package>
